--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ projects-sidebar-right.html
 services-urban-design.html
 faq.html
 gallery-slider.html
-# one-page.html
+one-page.html
 search-results.html
 pricing-table.html
 services-architectural-planning.html
