Service page design

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,34 @@
 404.html
-projects-fullwidth.html
-services-decoration-furniture.html
-#about.html
-gallery-grid.html
 index-2.html
-projects-grid-alt.html
-services.html
-blog-grid.html
-gallery-list.html
-projects-grid-masonry.html
-services-interior-design.html
+#about.html
 blog.html
-gallery-position-fullwidth.html
-projects-grid-simple.html
-services-landscape-design.html
+blog-grid.html
 blog-single.html
-gallery-position-left.html
-meet-the-team.html
-projects-sidebar-left.html
-services-sustainable-design.html
 contact.html
+gallery-grid.html
+gallery-list.html
+gallery-position-fullwidth.html
+gallery-position-left.html
 gallery-position-right.html
-no-sidebar.html
-projects-sidebar-right.html
-services-urban-design.html
-faq.html
 gallery-slider.html
+faq.html
+meet-the-team.html
+no-sidebar.html
 one-page.html
+projects-fullwidth.html
+projects-grid-alt.html
+projects-grid-masonry.html
+projects-grid-simple.html
+projects-sidebar-left.html
+projects-sidebar-right.html
+#services.html
+services-decoration-furniture.html
+#services-interior-design.html
+#services-architectural-planning.html
+#services-landscape-design.html
+services-sustainable-design.html
+services-urban-design.html
 search-results.html
 pricing-table.html
-services-architectural-planning.html
 testimonials.html
 .vscode/
