--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ gallery-position-left.html
 gallery-position-right.html
 gallery-slider.html
 faq.html
-meet-the-team.html
+#meet-the-team.html
 no-sidebar.html
 one-page.html
 projects-fullwidth.html
